# SdustParallelProgramming

./: .gitignore
CPUServerEdition/getPi/: hybridMpiAndOpenMPToGetPi1.cpp  hybridMpiAndOpenMPToGetPi2.cpp  mpiToGetPi1.cpp  mpiToGetPi2.cpp  openMPToGetPi1.cpp  openMPToGetPi2.cpp
CPUServerEdition/getPi/autoShell/: hybridRun1.sh  hybridRun1.txt  hybridRun2.sh  hybridRun2.txt  mpiRun1.sh  mpiRun1.txt  mpiRun2.sh  mpiRun2.txt
CPUServerEdition/knn/: hybridMpiAndOpenMPKnn.cpp  knn.cpp  main.cpp  mainTest.cpp  mpiKnn.cpp  openmpKnn.cpp  yhncsv.cpp  yhncsv.h
CPUServerEdition/matrixMultiply/: hybridOpenmpAndMpiMatrixMultiply.cpp  mpiMatrixMultiplyExample.cpp  openmpMatrixMultiply.cpp
cuda/demoProgram_ArrayAdd/: CMakeLists.txt  main  main.cu
cuda/independentHomeworkMatrixMultiply/: CPU串行和GPU并行表示.xlsx
cuda/independentHomeworkMatrixMultiply/parallel/: CMakeLists.txt  Makefile  image.cu  knn  knn.cu  out.txt  test.cu  yhn.cu
cuda/independentHomeworkMatrixMultiply/serial/: SerialMatrixMultiply.cpp
cuda/teamWork1_KNNclassificationAlgorithm/: CMakeLists.txt
cuda/teamWork1_KNNclassificationAlgorithm/parallel/clionVersion/: CMakeLists.txt  main.cu
cuda/teamWork1_KNNclassificationAlgorithm/parallel/serverVersion/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cu  main_copy.cu  yhncsv.cpp
cuda/teamWork1_KNNclassificationAlgorithm/pythonSerial/: main.py
cuda/teamWork2_RGBToGreyscale/: 灰度转换串行和并行对比.xlsx
cuda/teamWork2_RGBToGreyscale/openclC++Serial/: CMakeLists.txt  RGB2Grey.cpp
cuda/teamWork2_RGBToGreyscale/parallel/: CMakeLists.txt  main.cu  opencv.cpp
cudaServerEdition/RGB2Grey/parallel/: CMakeLists.txt  main.cu  rgb2Grey_gpu
cudaServerEdition/RGB2Grey/serial/: RGB2Grey
cudaServerEdition/crontab/: aaa.txt
cudaServerEdition/forkTest/: cpp11  cpp11.cpp  fork
cudaServerEdition/knn/: CMakeLists.txt  Makefile  main  yhncsv.h
cudaServerEdition/martixMultiply/parallel/: abc  abc.cu
cudaServerEdition/martixMultiply/serial/: aaa
demoProgram_ArrayAdd/: main.cu
independentHomeworkMatrixMultiply/: CPU串行和GPU并行表示.xlsx
independentHomeworkMatrixMultiply/parallel/: 0_modify.cu  1024_modify.cu  CMakeLists.txt  ParallelMatrixMultiply.cpp  ParallelMatrixMultiply.h  main.cu  test.cu  yhn.cu
independentHomeworkMatrixMultiply/serial/: CMakeLists.txt  SerialMatrixMultiply.cpp  SerialMatrixMultiply.h  main.cpp
independentHomeworkMatrixMultiply/virtualStudio/matrixMul/: matrixMul.sln
independentHomeworkMatrixMultiply/virtualStudio/matrixMul/matrixMul/: kernel.cu  matrixMul.vcxproj
independentHomeworkMatrixMultiply/virtualStudio/matrixMul/matrixMul/x64/Debug/: kernel.cu858917855.deps  matrixMul.exe.recipe
independentHomeworkMatrixMultiply/virtualStudio/matrixMul/matrixMul/x64/Debug/matrixMul.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  matrixMul.lastbuildstate  matrixMul.write.1u.tlog
independentHomeworkMatrixMultiply/virtualStudio/matrixMul/x64/Debug/: matrixMul.exp  matrixMul.ilk
openMPAndMPI/examples/mpi/: CMakeLists.txt  basic.c  hello.c  hybrid.c
openMPAndMPI/examples/openmp/: CMakeLists.txt  hello.cpp  noparafor.cpp  parafor1.cpp  parafor2.cpp  private.cpp  privatewrong1.cpp  privatewrong2.cpp  privatewrong3.cpp  sections.cpp  share.cpp  single.cpp
openMPAndMPI/getPi/: CMakeLists.txt  hm.cpp  hybridMpiAndOpenMPToGetPi1.cpp  hybridMpiAndOpenMPToGetPi2.cpp  mpiTest.cpp  mpiToGetPi1.cpp  mpiToGetPi2.cpp  mpiToGetPiExample.cpp  openMPToGetPi1.cpp  openMPToGetPi2.cpp
openMPAndMPI/getPi/linuxExecutable/: hybridMpiAndOpenMPToGetPi1  hybridMpiAndOpenMPToGetPi2  mpiToGetPi1  mpiToGetPi2  openMPToGetPi1  openMPToGetPi2
openMPAndMPI/knn/: CMakeLists.txt  hybridMpiAndOpenMPKnn.cpp  mpiKnn.cpp  openmpKnn.cpp
openMPAndMPI/matrixMultiply/: CMakeLists.txt  aaa.cpp  mpiMatrixMultiply.cpp  mpiMatrixMultiplyAbc.cpp  openmpMatrixMultiply.cpp  test.cpp
openMPAndMPI/serverEditionLearnOpenmp/: CMakeLists.txt  hybridMpiAndOpenMPToGetPi1.cpp  hybridMpiAndOpenMPToGetPi2.cpp  openMPToGetPi1.cpp  openMPToGetPi2.cpp
teamWork1_KNNclassificationAlgorithm/parallel/: CMakeLists.txt  main.cu  main_copy.cu  parallel.rar  yhncsv.cpp  yhncsv.h
teamWork1_KNNclassificationAlgorithm/parallel/clionVersion/: CMakeLists.txt  common.h  main.cu  yhncsv.cpp
teamWork1_KNNclassificationAlgorithm/parallel/clionVersion/cudaStudyOfKNN/: main2.cu
teamWork1_KNNclassificationAlgorithm/parallel/cudaStudyOfKNN/: main.cu  main1.cu  main2.cu
teamWork1_KNNclassificationAlgorithm/parallel/serverVersion/: CMakeCache.txt  Makefile  SerialMatrixMultiply.h  aaa  cmake_install.cmake
teamWork1_KNNclassificationAlgorithm/pythonSerial/: main.py  testy.py
teamWork2_RGBToGreyscale/parallel/: CMakeLists.txt
结果/: CPU串行和GPU并行时间统计.xlsx  cudaKNN.txt  cudaKNN.xlsx  rgbToGrey.txt  speed.xlsx
结果/cudaCPU独立作业/: 乔丹独立作业.doc  刘羽翯独立作业.doc  尹浩男独立作业.docx  贾志愚独立作业.doc
结果/四个项目试验报告/: CPUKNN刘羽翯.docx  CPUMatrixMultiply乔丹.doc  CUDAKNN尹浩男.docx  CUDARGB2Grey贾志愚.docx
资料/: README.md
资料/GPU程序设计/: opencv3安装配置和交叉编译.doc  opencv程序--RGB2Gray及其算法.doc
